src/pages/SignUp/styles.module.scss
.signup {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.content {
  display: flex;
  flex-wrap: wrap;

  align-items: center;
  justify-content: center;
  gap: 40px;
  padding: 30px;

  & > section {
    h1 {
      font-size: 3rem;
      font-weight: 700;
      line-height: 4rem;
      margin-bottom: 1rem;
      max-width: 500px;
    }
    p {
      font-size: 1rem;
      line-height: 2rem;
      max-width: 500px;
      color: var(--Grayish-Blue);
    }
  }
}

.link {
  background-color: var(--Blue);
  display: block;
  text-align: center;
  margin-bottom: 30px !important;
  span {
    font-weight: 600;
  }
}

.form {
  background: var(--White);
  border-radius: 10px;
  padding: 15px 40px;
  min-width: 510px;
  box-shadow: 0px 5px 2px 1px rgba(0, 0, 0, 0.2);

  p {
    text-align: center;
    color: var(--Grayish-Blue);
    font-size: 0.7rem !important;

    a {
      color: var(--Red);
      font-weight: 600;
    }
  }
}

@media (max-width: 550px) {
  .content {
    text-align: center;

    & > section {
      h1 {
        font-size: 2rem;
        line-height: 2rem;
      }

      p {
        margin-bottom: -30px;
      }
    }
  }

  .form {
    min-width: fit-content;

    p {
      line-height: 1rem !important;
      padding: 10px 0 30px 0;
    }
  }
}

